trying to fix slide animation mobile

--- a/styles/animations.module.scss
+++ b/styles/animations.module.scss
@@ -15,7 +15,7 @@
 
 @keyframes slideRight {
   0% {
-    transform: translate3d(-100%, 0px, 0px);
+    transform: translateX(-100%);
   }
   100% {
     transform: none;
